--- a/style.css
+++ b/style.css
@@ -23,19 +23,15 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
-    --header1: calc(3.5rem + 1vw);
-    --header2: calc(3rem + 1vw);
-    --header3: calc(2.5rem + 1vw);
-    --header4: calc(2rem + 1vw);
-    --text: calc(1.5rem + 1vw);
+    --header1: calc(1.5rem + 1vw);
+    --header2: calc(3.5rem + 1vw);
+    --header3: calc(3rem + 1vw);
+    --header4: calc(2.4rem + 1vw);
+    --text-size: calc(1.5rem + 1vw);
     --big: calc(2.5rem + 1vw);
     --special-color: #906272;
     --background-color: #414141;
     --gray-text: #525252;
-}
-
-body {
-    font-family: 'Poppins', sans-serif;
 }
 
 h1 {
@@ -58,8 +54,9 @@ li,
 input,
 button,
 label,
+a,
 p {
-    font-size: var(--text);
+    font-size: var(--text-size);
 }
 
 ul {
@@ -68,6 +65,7 @@ ul {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 .flex {
@@ -75,4 +73,92 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+body {
+    font-family: "Ruhl", sans-serif;
+}
+
+h1 {
+    font-family: "Vibes", sans-serif;
+}
+
+/* Nav Section */
+.main-head {
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 2;
+}
+
+nav {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    min-height: 10vh;
+    padding: 2rem 0rem;
+}
+
+#logo {
+    flex: 1 1 20rem;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: space-around;
+    flex: 1 1 20rem;
+}
+
+/* Hero Section */
+.hero {
+    width: 95%;
+    margin: 0 0 0 auto;
+    min-height: 90vh;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+}
+
+.hero-intoduction {
+    flex: 2 1 40rem;
+    text-align: center;
+}
+
+.hero-intoduction p {
+    padding: 5rem 10rem;
+}
+
+.hero-intoduction h2 {
+    padding-top: 3rem;
+}
+
+.hero-intoduction a {
+    padding: 2rem 8rem;
+    border: 3px solid black;
+    margin-bottom: 4rem;
+}
+
+.hero-images {
+    flex: 1 1 40rem;
+    background: linear-gradient(#dad8dd, #dad1d4);
+    position: relative;
+    z-index: 1;
+}
+
+.hero-elena {
+    max-height: 90vh;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.plant {
+    position: absolute;
+    bottom: 0;
+    left: -20%;
+    z-index: -1;
+}
+
+.plant2 {
+    left: 40%;
 }
