--- a/style.css
+++ b/style.css
@@ -152,11 +152,13 @@ nav {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    position: absolute;
+    bottom: 0%;
 }
 
 .plant {
     position: absolute;
-    bottom: 0;
+    bottom: -5%;
     left: -20%;
     z-index: -1;
     transform: translateY(10%) rotateZ(-10deg) rotateX(-90deg);
@@ -226,6 +228,7 @@ nav {
     transform: translate(-50%, -20%);
     letter-spacing: 2rem;
 }
+
 .about-image img {
     max-height: 100vh;
     height: 100%;
