--- a/style.css
+++ b/style.css
@@ -257,6 +257,29 @@ nav {
     padding: 3rem 8rem;
 }
 
+/*GALLERY*/
+
+.gallery {
+    display: grid;
+    min-height: 100vh;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.gallery img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.gallery1 {
+    grid-column: 1/3;
+}
+
+.gallery2 {
+    grid-column: 3/4;
+    grid-row: 1/3;
+}
+
 @media screen and (max-width:842px) {
     .hero {
         width: 100%;
