--- a/style.css
+++ b/style.css
@@ -230,7 +230,6 @@ nav {
 }
 
 .about-image img {
-    max-height: 100vh;
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -278,6 +277,74 @@ nav {
 .gallery2 {
     grid-column: 3/4;
     grid-row: 1/3;
+}
+
+/*Contact Section*/
+
+.contact {
+    min-height: 90vh;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.form-wrapper {
+    flex: 3 1 40rem;
+}
+
+.form-wrapper h3 {
+    margin: 5rem 0rem;
+}
+
+.form-wrapper h4 {
+    color: var(--special-color);
+}
+
+.form-wrapper label {
+    display: block;
+}
+
+.form-wrapper input {
+    display: block;
+    margin: 3rem 0rem;
+    background: var(--background-color);
+    color: white;
+    border: none;
+    padding: 1rem;
+    width: 100%;
+}
+
+.form-wrapper button {
+    padding: 1rem 8rem;
+    background: var(--special-color);
+    color: white;
+    border: none;
+    width: 100%;
+}
+
+.contact img {
+    flex: 1 1 40rem;
+}
+
+/*Footer section*/
+
+footer {
+    background: var(--background-color);
+    color: white;
+    display: flex;
+    padding: 3rem 5%;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+footer ul {
+    display: flex;
+    flex: 1 1 40rem;
+    justify-content: space-between;
+    align-items: center;
+}
+
+footer h2 {
+    flex: 4 1 40rem;
 }
 
 @media screen and (max-width:842px) {
@@ -359,7 +426,6 @@ nav {
     }
 
     /*Gallery Section*/
-
     .gallery {
         grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     }
@@ -367,5 +433,21 @@ nav {
     .gallery img {
         grid-column: auto;
         grid-row: auto;
+    }
+
+    /* contact section*/
+    .contact img {
+        display: none;
+    }
+
+    /* footer section */
+    footer ul {
+        order: 1;
+    }
+
+    footer h2 {
+        order: 2;
+        text-align: center;
+        padding: 1rem;
     }
 }
